Add calendar + bulls-and-cows + tidy readmes