@@ -1,9 +1,48 @@
-# Java Mini-Projects
 
-A small portfolio of Java projects. Each folder is self-contained with its own README.
+# Java Mini-Projects Portfolio
 
-## Featured
-- [Trivia Game (JavaFX)](trivia-game/) — UI + File I/O + randomization
-- [Game of Life (JavaFX)](game-of-life/) — simulation & Canvas rendering
-- [Generic Set](generic-set/) — generics, collections, iterators
-- [Bulls and Cows](bulls-and-cows/) — game logic & input validation
+A compact portfolio of Java projects showcasing UI (JavaFX), OOP/design, file I/O, and data structures.  
+Each project is self-contained in its own folder with a README and sources.
+
+## Featured Projects
+- **[Trivia  (JavaFX)](trivia/)** — UI + file I/O + randomization. **Grade:** 98/100  
+- **[Cellular Automaton — Game of Life (JavaFX)](cellular-automaton/)** — simulation & Canvas rendering. **Grade:** 99/100  
+- **[Generic Set (Java)](generic-set/)** — generics, collections, iterators. **Grade:** 100/100  
+- **[Bulls & Cows (Java)](bulls-and-cows/)** — game logic & input validation. **Grade:** 97/100  
+- **[Calendar Scheduler (JavaFX)](calendar-scheduler/)** — data structures + calendar UI.
+
+> If your Trivia folder is named `trivia/` instead of `trivia/`, update the link above to `trivia/`.
+
+---
+
+## Requirements
+- **JDK 17+**  
+- **JavaFX 17+** (for JavaFX projects)
+
+### Run (IDE)
+Open the project folder in IntelliJ IDEA and run the entry point class (e.g., `Project.java`, `MakeSet.java`, or as specified in each project’s README).
+
+### Run (command line, JavaFX)
+```
+--module-path "<path-to-javafx>/lib" --add-modules javafx.controls,javafx.fxml
+```
+
+---
+## Repository Structure
+```
+├─ trivia/            # or: trivia/  (Trivia  – JavaFX)
+├─ cellular-automaton/     # Game of Life – JavaFX
+├─ generic-set/            # Generic Set implementation
+├─ bulls-and-cows/         # Bulls & Cows logic game
+└─ calendar-scheduler/     # Calendar / Scheduler – JavaFX
+```
+
+---
+## Notes
+- No copyrighted course PDFs/prompts are included; all descriptions are original.
+- Public class names match their file names (e.g., `public class Project` → `Project.java`).
+- If a package declaration is used, folders match the package path under `src/main/java/`.
+
+## License
+MIT (see `LICENSE`).
+```
